--- a/main.html
+++ b/main.html
@@ -7,6 +7,40 @@
 </head>
 
 <body>
+	<header>
+  <h1>Harry Potter and the Sorcerer's Stone</h1>
+</header>
+
+<nav>
+  <a href="#actor" id="nav-actor">Actors</a>
+  <a href="#quote" id="nav-quote">Quotes</a>
+</nav>
+
+<section id="summary">
+  <h2>Summary</h2>
+  <p>Harry Potter discovers he is a wizard on his 11th birthday and attends Hogwarts School of Witchcraft and Wizardry. He makes friends, learns magic, and faces the dark wizard Voldemort who threatens the wizarding world.</p>
+</section>
+
+<section id="actor">
+  <h2>Actors</h2>
+  <p>Daniel Radcliffe as Harry Potter</p>
+  <p>Emma Watson as Hermione Granger</p>
+</section>
+
+<section id="quote">
+  <h2>Favorite Quote</h2>
+  <blockquote>"It does not do to dwell on dreams and forget to live."</blockquote>
+</section>
+
+<aside>
+  <p>IMDb Rating: 7.6/10</p>
+  <p>Release Date: November 16, 2001</p>
+</aside>
+
+<footer>
+  <p>Produced by: David Heyman</p>
+</footer>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
