--- a/main.html
+++ b/main.html
@@ -7,40 +7,47 @@
 </head>
 
 <body>
-	<header>
-  <h1>Harry Potter and the Sorcerer's Stone</h1>
-</header>
+	<header><h1>Harry Potter</h1></header>
+     <nav>
+		<a href="#actor" id="nav-actor">Actors</a>
+		<a href="#quote" id="nav-quote">Quotes</a>
+	 </nav>
 
-<nav>
-  <a href="#actor" id="nav-actor">Actors</a>
-  <a href="#quote" id="nav-quote">Quotes</a>
-</nav>
+	 <section id="actor">
+		 <h3>Harry Potter</h3>
+		 <P>Daniel grew up with the role of Harry and became the face of a generation’s childhood</P>	 
+	 </section>
+     <section id="quote">
+		 <h3>I don't go looking for trouble. Trouble usually finds me.</h3>
+		 <p> Harry doesn’t want problems, but they seem to happen around him anyway, showing his fate and bravery.</p>
+	
+	 </section>	
 
-<section id="summary">
-  <h2>Summary</h2>
-  <p>Harry Potter discovers he is a wizard on his 11th birthday and attends Hogwarts School of Witchcraft and Wizardry. He makes friends, learns magic, and faces the dark wizard Voldemort who threatens the wizarding world.</p>
-</section>
+	<section id="actor">
+		 <h3> Emma Watson</h3>
+		 <P> Emma Watson is admired for her intelligence and strong personality both on and off screen.</P>	 
+	 </section>
+     <section id="quote">
+		 <h3> Books! And cleverness! There are more important things — friendship and bravery.</h3>
+		 <p>Knowledge is important, but human values like loyalty and courage matter more in life.</p>
+	
+	 </section>
 
-<section id="actor">
-  <h2>Actors</h2>
-  <p>Daniel Radcliffe as Harry Potter</p>
-  <p>Emma Watson as Hermione Granger</p>
-</section>
 
-<section id="quote">
-  <h2>Favorite Quote</h2>
-  <blockquote>"It does not do to dwell on dreams and forget to live."</blockquote>
-</section>
+	<section id="actor">
+		 <h3> Ron Weasley </h3>
+		 <P> Both actors gave Dumbledore wisdom and grace, shaping him as a guide for Harry</P>	 
+	 </section>
+     <section id="quote">
+		 <h3>Happiness can be found even in the darkest of times, if one only remembers to turn on the light</h3>
+		 <p>Even in bad times, hope and happiness are possible if we try to see the good.</p>
+	
+	 </section>
 
-<aside>
-  <p>IMDb Rating: 7.6/10</p>
-  <p>Release Date: November 16, 2001</p>
-</aside>
-
-<footer>
-  <p>Produced by: David Heyman</p>
-</footer>
-
+	<summary>
+		Harry Potter, a young boy who discovers he is a wizard on his 11th birthday, attends Hogwarts School of Witchcraft and Wizardry. There, he makes friends and uncovers the truth about his past and the dark wizard Voldemort who killed his parents. Throughout the series, Harry faces numerous challenges and battles against Voldemort to protect the wizarding world.
+	</summary>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
