--- a/main.html
+++ b/main.html
@@ -7,46 +7,35 @@
 </head>
 
 <body>
-	<header><h1>Harry Potter</h1></header>
+	<header>Harry Potter</header>
      <nav>
 		<a href="#actor" id="nav-actor">Actors</a>
 		<a href="#quote" id="nav-quote">Quotes</a>
 	 </nav>
 
+     <summary>
+		Harry Potter, a young boy who discovers he is a wizard on his 11th birthday, attends Hogwarts School.
+	</summary>
+
 	 <section id="actor">
-		 <h3>Harry Potter</h3>
-		 <P>Daniel grew up with the role of Harry and became the face of a generation’s childhood</P>	 
+		 Harry Potter
+		
 	 </section>
      <section id="quote">
-		 <h3>I don't go looking for trouble. Trouble usually finds me.</h3>
-		 <p> Harry doesn’t want problems, but they seem to happen around him anyway, showing his fate and bravery.</p>
+		 I don't go looking for trouble. Trouble usually finds me.		
 	
 	 </section>	
 
-	<section id="actor">
-		 <h3> Emma Watson</h3>
-		 <P> Emma Watson is admired for her intelligence and strong personality both on and off screen.</P>	 
-	 </section>
-     <section id="quote">
-		 <h3> Books! And cleverness! There are more important things — friendship and bravery.</h3>
-		 <p>Knowledge is important, but human values like loyalty and courage matter more in life.</p>
+      <aside>
+		  <p>IMDb rating :  7.7 IMDb rating</p>
+		  <p>Rekease date: November 16, 2001. </p>
+	  </aside>
+
+	<footer> If you're surprised your faves didn't make the list, that's what the comments are for! Let us know who we're missing.</footer>
+
 	
-	 </section>
-
-
-	<section id="actor">
-		 <h3> Ron Weasley </h3>
-		 <P> Both actors gave Dumbledore wisdom and grace, shaping him as a guide for Harry</P>	 
-	 </section>
-     <section id="quote">
-		 <h3>Happiness can be found even in the darkest of times, if one only remembers to turn on the light</h3>
-		 <p>Even in bad times, hope and happiness are possible if we try to see the good.</p>
 	
-	 </section>
-
-	<summary>
-		Harry Potter, a young boy who discovers he is a wizard on his 11th birthday, attends Hogwarts School of Witchcraft and Wizardry. There, he makes friends and uncovers the truth about his past and the dark wizard Voldemort who killed his parents. Throughout the series, Harry faces numerous challenges and battles against Voldemort to protect the wizarding world.
-	</summary>
+		
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
