--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 
       <aside>
 		  <p>IMDb rating :  7.7 IMDb rating</p>
-		  <p>Rekease date: November 16, 2001. </p>
+		  <p>Release date: November 16, 2001. </p>
 	  </aside>
 
 	<footer> If you're surprised your faves didn't make the list, that's what the comments are for! Let us know who we're missing.</footer>
