--- a/main.html
+++ b/main.html
@@ -7,35 +7,37 @@
 </head>
 
 <body>
-	<header>Harry Potter</header>
-     <nav>
-		<a href="#actor" id="nav-actor">Actors</a>
-		<a href="#quote" id="nav-quote">Quotes</a>
-	 </nav>
+	 <header>Harry Potter</header>
 
-     <summary>
-		Harry Potter, a young boy who discovers he is a wizard on his 11th birthday, attends Hogwarts School.
-	</summary>
+  <nav>
+    <a href="#actor" id="nav-actor">Actors</a>
+    <a href="#quote" id="nav-quote">Quotes</a>
+  </nav>
 
-	 <section id="actor">
-		 Harry Potter
-		
-	 </section>
-     <section id="quote">
-		 I don't go looking for trouble. Trouble usually finds me.		
-	
-	 </section>	
+  <section id="summary">
+    Harry Potter, a young boy who discovers he is a wizard on his 11th birthday, attends Hogwarts School.
+  </section>
 
-      <aside>
-		  <p>IMDb rating :  7.7 IMDb rating</p>
-		  <p>Release date: November 16, 2001. </p>
-	  </aside>
+  <section id="actor">
+    <ul>
+      <li>Daniel Radcliffe as Harry Potter</li>
+      <li>Emma Watson as Hermione Granger</li>
+      <li>Rupert Grint as Ron Weasley</li>
+    </ul>
+  </section>
 
-	<footer> If you're surprised your faves didn't make the list, that's what the comments are for! Let us know who we're missing.</footer>
+  <section id="quote">
+    <blockquote>
+      "I don't go looking for trouble. Trouble usually finds me." – Harry Potter
+    </blockquote>
+  </section>
 
-	
-	
-		
+  <aside>
+    <p>IMDb rating: 7.7</p>
+    <p>Release date: November 16, 2001</p>
+  </aside>
+
+  <footer>Produced by: Akash Bawanthade</footer>
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
